# minimal_python_project

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
